<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

    <!-- Views de la App -->
    <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mt_costo_del_servicio"
            app:layout_constraintBottom_toBottomOf="@id/mt_costo_del_servicio"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mt_costo_del_servicio"
            android:layout_width="190dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_text"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costo_del_servicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"

        />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:id="@+id/pregunta_del_servicio_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_service"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pregunta_del_servicio"
            app:layout_constraintBottom_toBottomOf="@id/pregunta_del_servicio"
               />
    <TextView
            android:id="@+id/pregunta_del_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Propinapp.TextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/pregunta_del_servicio_icon"
            app:layout_constraintTop_toBottomOf="@id/mt_costo_del_servicio"
            android:text="@string/pregunta_servicio"
    />

    <RadioGroup
            android:id="@+id/opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pregunta_del_servicio"
            app:layout_constraintStart_toStartOf="@id/pregunta_del_servicio"
            android:orientation="vertical"
            android:checkedButton="@id/veinte_porciento">
        <RadioButton
                android:id="@+id/veinte_porciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increible"/>
        <RadioButton
                android:id="@+id/dieciocho_porciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bueno"/>
        <RadioButton
                android:id="@+id/quince_porciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptable"/>

    </RadioGroup>
    <ImageView
            android:id="@+id/switch_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_round_up"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/redondear_switch"
            app:layout_constraintBottom_toBottomOf="@id/redondear_switch"
    />
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/redondear_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_redondear"
            app:layout_constraintStart_toEndOf="@id/switch_icon"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/opciones"
            style="@style/Widget.Propinapp.TextView"
    />
    <Button
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/boton_calcular"
            app:layout_constraintStart_toStartOf="@id/redondear_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/redondear_switch"
            android:text="@string/boton_calular"
    />
    <TextView
            android:id="@+id/resultado"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Propinapp.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boton_calcular"
            tools:text="Costo Total: $10.00"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>